--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,4 +1,13 @@
 # {{ StartDevOnlyBlock }}
+- appearByUpdate: "2021-05-17"
+  disappearByUpdate: "2021-04-19"
+  date: "2021-04-18"
+  body: >
+    **Revision to historical case data in England.** 
+    The introduction of a new system disrupted the removal of cases where a positive rapid lateral flow test was followed by all negative polymerase 
+    chain reaction (PCR) test taken within 3 days. Therefore 4,776 additional cases have been removed today. Regions and local authorities do not 
+    show the actual number of new cases reported. UK and England numbers of newly reported cases have been adjusted and correctly reflect new cases reported.
+    [**More**](/details/whats-new)
 
 - appearByUpdate: "2021-05-10"
   disappearByUpdate: "2021-05-11"
