--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -4,8 +4,8 @@
   date: "2021-05-18"
   body: >
     **Revision to historical case data in England.** 
-    The introduction of a new system disrupted the removal of cases where a positive rapid lateral flow test was followed by all negative polymerase 
-    chain reaction (PCR) test taken within 3 days. Therefore 4,776 additional cases have been removed today. Regions and local authorities do not 
+    The introduction of a new system disrupted the removal of cases where a positive rapid lateral flow test (LFD) was followed by all negative laboratory
+    (PCR) tests taken within 3 days. Therefore 4,776 additional cases have been removed today. Regions and local authorities do not 
     show the actual number of new cases reported. UK and England numbers of newly reported cases have been adjusted and correctly reflect new cases reported.
     [**More**](/details/whats-new)
 
