--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -4,6 +4,13 @@
   disappearByUpdate: "2021-05-20"
   date: "2021-05-19"
   body: >
+    **Revision to historical case data in England.** [**More**](/details/whats-new)
+
+# {{ StartDevOnlyBlock }}
+- appearByUpdate: "2021-05-19"
+  disappearByUpdate: "2021-05-20"
+  date: "2021-05-19"
+  body: >
     **Revision to historical case data in England.** 
     The introduction of a new system disrupted the removal of cases where a positive rapid lateral flow test (LFD) was followed by all negative laboratory
     (PCR) tests taken within 3 days, as reported yesterday. Therefore a further 561 cases have been removed today. Regions and local authorities do not 
@@ -11,7 +18,6 @@
     This issue will be ongoing over the next few days.
     [**More**](/details/whats-new)
 
-# {{ StartDevOnlyBlock }}
 
 - appearByUpdate: "2021-05-10"
   disappearByUpdate: "2021-05-11"
