--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,10 +1,10 @@
 
 
-- appearByUpdate: "2021-05-19"
-  disappearByUpdate: "2021-05-20"
+- appearByUpdate: "2021-05-20"
+  disappearByUpdate: "2021-05-21"
   date: "2021-05-20"
   body: >
-    **Revision to historical case data in England.** [**More**](/details/whats-new)
+    Revision to historical case data in England. [More](/details/whats-new)
 
 # {{ StartDevOnlyBlock }}
 - appearByUpdate: "2021-05-19"
