--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -88,16 +88,15 @@ changeLog:
     relativeUrl: "/details/cases"
     headline: Change to reporting of daily new cases in England
     body: > 
-      The way cases are reported in England has changed. Previously reported cases that have been identified through a positive rapid lateral flow 
-      test are now being removed on a daily basis for people who took Polymerase Chain Reaction (PCR) tests within 3 days that were all negative. 
-      This means that the difference between the cumulative reported number of cases on a particular day and the number reported on the previous day 
-      is not equivalent to the number of newly reported cases (by publish date) in an area. 
-      
+      The way cases are reported in England has changed. Reported cases are sometimes removed if subsequent tests are negative. This happens when 
+      cases identified through a positive rapid lateral flow test are followed by polymerase chain reaction (PCR) tests within 3 days that are all 
+      negative. These cases are now being removed daily.
 
-      The newly reported number of cases for England (and the UK) are adjusted to take this into account but the newly reported cases 
-      for regions and local authorities level within England are not. This means that at these geographical levels the number should not be
-      considered as the actual number of new cases reported on that date. For analysis of trends in cases within England, the data on new cases 
-      by specimen date should be used.
+      Because of this, the number of newly-reported cases may not be the same as the difference between the total number of reported cases from 
+      one day to the next. The number of newly-reported cases in England and the UK is adjusted to take this into account, but the numbers for 
+      regions and local authorities are not adjusted. This means that for regions and local authorities, this figure does not show the actual 
+      number of new cases reported on that date. For analysis of trends in cases within England, use the data on new cases by specimen date 
+      rather than report date. The new cases by specimen date are always adjusted for the whole time series to take account of any changes.
 
   - type: *dataIssue
     date: "2021-05-20"
