--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2178,65 +2178,137 @@ cards:
     download:
       - vaccinationsAgeDemographics
     
-    tabs:
-      - heading: Heatmap
-        tabType: heatmap
-        fields:
-          - label: Age demographics
-            value: vaccinationsAgeDemographics
-            amplitude: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-            amplitudeLabel: Percentage uptake
-            metricLabel: Age group
-            parameter: age
-            metrics:
-            - label: 18 to 24
-              value: "18_24"
+    options:
+      type: radio
+      heading: null
+      choices:
+        - First dose
+        - Second dose
 
-            - label: 25 to 29
-              value: "25_29"
+    First dose:
 
-            - label: 30 to 34
-              value: "30_34"
+      tabs:
+        - heading: Heatmap
+          tabType: heatmap
+          fields:
+            - label: Age demographics
+              value: vaccinationsAgeDemographics
+              amplitude: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+              amplitudeLabel: Percentage uptake
+              metricLabel: Age group
+              parameter: age
+              metrics:
+              - label: 18 to 24
+                value: "18_24"
 
-            - label: 35 to 39
-              value: "35_39"
+              - label: 25 to 29
+                value: "25_29"
 
-            - label: 40 to 44
-              value: "40_44"
+              - label: 30 to 34
+                value: "30_34"
 
-            - label: 45 to 49
-              value: "45_49"
+              - label: 35 to 39
+                value: "35_39"
 
-            - label: 50 to 54
-              value: "50_54"
+              - label: 40 to 44
+                value: "40_44"
 
-            - label: 55 to 59
-              value: "55_59"
+              - label: 45 to 49
+                value: "45_49"
 
-            - label: 60 to 64
-              value: "60_64"
+              - label: 50 to 54
+                value: "50_54"
 
-            - label: 65 to 69
-              value: "65_69"
+              - label: 55 to 59
+                value: "55_59"
 
-            - label: 70 to 74
-              value: "70_74"
+              - label: 60 to 64
+                value: "60_64"
 
-            - label: 75 to 79
-              value: "75_79"
+              - label: 65 to 69
+                value: "65_69"
 
-            - label: 80 to 84
-              value: "80_84"
+              - label: 70 to 74
+                value: "70_74"
 
-            - label: 85 to 89
-              value: "85_89"
+              - label: 75 to 79
+                value: "75_79"
 
-            - label: 90+
-              value: "90+"
+              - label: 80 to 84
+                value: "80_84"
 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+              - label: 85 to 89
+                value: "85_89"
+
+              - label: 90+
+                value: "90+"
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+
+    Second dose:
+
+      tabs:
+        - heading: Heatmap
+          tabType: heatmap
+          fields:
+            - label: Age demographics
+              value: vaccinationsAgeDemographics
+              amplitude: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+              amplitudeLabel: Percentage uptake
+              metricLabel: Age group
+              parameter: age
+              metrics:
+              - label: 18 to 24
+                value: "18_24"
+
+              - label: 25 to 29
+                value: "25_29"
+
+              - label: 30 to 34
+                value: "30_34"
+
+              - label: 35 to 39
+                value: "35_39"
+
+              - label: 40 to 44
+                value: "40_44"
+
+              - label: 45 to 49
+                value: "45_49"
+
+              - label: 50 to 54
+                value: "50_54"
+
+              - label: 55 to 59
+                value: "55_59"
+
+              - label: 60 to 64
+                value: "60_64"
+
+              - label: 65 to 69
+                value: "65_69"
+
+              - label: 70 to 74
+                value: "70_74"
+
+              - label: 75 to 79
+                value: "75_79"
+
+              - label: 80 to 84
+                value: "80_84"
+
+              - label: 85 to 89
+                value: "85_89"
+
+              - label: 90+
+                value: "90+"
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+
 
 # {{ EndDevOnlyBlock }}
 
