adds equivalent dl links for case demogs

--- a/Layouts/downloads.yaml
+++ b/Layouts/downloads.yaml
@@ -41,6 +41,20 @@ downloads:
       - text: CSV (stacked)
         url: /downloads/demographic/cases/specimenDate_ageDemographic-stacked.csv
 
+  - label: Equivalent downloads for age demographic of cases by specimen date file(s)
+    links:
+      - text: LTLA
+        url: https://api.coronavirus.data.gov.uk/v2/data?areaType=ltla&metric=newCasesBySpecimenDateAgeDemographics&format=csv
+      
+      - text: UTLA
+        url: https://api.coronavirus.data.gov.uk/v2/data?areaType=utla&metric=newCasesBySpecimenDateAgeDemographics&format=csv
+
+      - text: Region
+        url: https://api.coronavirus.data.gov.uk/v2/data?areaType=region&metric=newCasesBySpecimenDateAgeDemographics&format=csv
+
+      - text: England
+        url: https://api.coronavirus.data.gov.uk/v2/data?areaType=nation&areaCode=E92000001&metric=newCasesBySpecimenDateAgeDemographics&format=csv
+        
   - label: Age demographic of cases by reporting date [Deprecated - files not updated after 23 December 2020]
     links:
       - text: CSV (unstacked)
