--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -4,6 +4,7 @@
   date: "2021-05-29"
   body: >
     Because of technical difficulties affecting reporting of vaccine data from Public Health Wales, today's update is delayed.
+    We will update the dashboard as soon as we are able to.
     
 # {{ StartDevOnlyBlock }}
 
