--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -82,6 +82,15 @@ colours:
 
 
 changeLog:
+  - type: *newMetric
+    date: "2021-06-01"
+    displayBanner: false
+    relativeUrl: "/details/vaccinations"
+    headline: Local vaccination age breakdowns added
+    body: > 
+     We are now reporting daily figures for first and second dose vaccinations by age group at region, upper tier local authority and 
+     lower tier local authority level within England.
+
   - type: *dataIssue
     date: "2021-05-21"
     displayBanner: true
