--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -82,6 +82,15 @@ colours:
 
 
 changeLog:
+  - type: *dataIssue
+    date: "2021-06-02"
+    displayBanner: false
+    relativeUrl: 
+    headline: Figures reported by Wales for 48-hour period
+    body: |
+      Figures reported on 1 June for Wales are for the 48-hour period from 9am Sunday 30 May to 9am Tuesday 1 June. The UK figures will also include 
+      figures from a 48-hour period from Wales.
+
   - type: *newMetric
     date: "2021-06-01"
     displayBanner: false
