--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1551,8 +1551,10 @@ cards:
       The number of people aged 18 and over who have received a first dose COVID-19 vaccination, shown by vaccination date. 
       Daily figures include all vaccines that were given on the date shown, 
       and that were entered on the relevant system at the time of extract.
-      For England, only people aged 18 and over who have an NHS number and are currently alive are included. Therefore the total
-      numbers will not match the totals by report date. Data for the latest 2 days, marked in grey, are incomplete.
+      For England, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
+      Therefore the total numbers will not match the totals by report date. 
+      They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
+      Data for the latest 2 days, marked in grey, are incomplete.
     
     download:
       - newPeopleVaccinatedFirstDoseByVaccinationDate
@@ -1865,7 +1867,9 @@ cards:
     abstract: >
       The number of people aged 18 or over who have received a first dose COVID-19 vaccination, shown by vaccination date. 
       Daily figures include all vaccines that were given on the date shown, and that were entered on the relevant system at the time of extract.
-      For English areas, only people who have an NHS number and are currently alive are included. Data for the latest 2 days, marked in grey, are incomplete.
+      For English areas, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
+      They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme. 
+      Data for the latest 2 days, marked in grey, are incomplete.
     
     download:
       - newPeopleVaccinatedFirstDoseByVaccinationDate
@@ -2038,8 +2042,9 @@ cards:
       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
       by dose, up to the latest day on which vaccine data were reported.
       Daily figures include all vaccines that were given up to and including the date shown.
-      For English areas, only people who have an NHS number and are currently alive are included. The denominator
-      used is the number of people on the National Immunisation Management Service (NIMS) database.
+      For English areas, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
+      The denominator used is the number of people on the National Immunisation Management Service (NIMS) database. 
+      They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
       For Scottish areas, the denominator used is the mid-2019 population estimate,
       published by National Records of Scotland. For this reason, comparisons should be made with caution.
     
@@ -2103,8 +2108,9 @@ cards:
       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
       shown by vaccination date.
       Daily figures include all vaccines that were given up to and including the date shown.
-      For English areas, only people who have an NHS number and are currently alive are included. The denominator
-      used is the number of people on the National Immunisation Management Service (NIMS) database.
+      For English areas, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
+      The denominator used is the number of people on the National Immunisation Management Service (NIMS) database. 
+      They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
       For Scottish areas, the denominator used is the mid-2019 population estimate,
       published by National Records of Scotland. For this reason, comparisons should be made with caution.
       Percentages lower than 0.1 will not appear on the chart and show as N/A in data tables.
@@ -2325,8 +2331,9 @@ cards:
     abstract: >
       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
       by dose, up to the latest day on which vaccine data were reported.
-      For English areas, only people who have an NHS number and currently are alive are included. The denominator
-      used is the number of people on the National Immunisation Management Service (NIMS) database.
+      For English areas, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
+      The denominator used is the number of people on the National Immunisation Management Service (NIMS) database. 
+      They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
       For Scottish areas, the denominator used is the mid-2019 population estimate,
       published by National Records of Scotland. For this reason, comparisons should be made with caution.
 
@@ -2522,3 +2529,6 @@ cards:
       - heading: About
         tabType: metadata
         filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+
+############################################################################################################################# 
+ 
