--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2170,7 +2170,7 @@ cards:
       excluded:
         areaType:
           - overview
-          - nation
+          # - nation
 
     fullWidth: true
     abstract: >
@@ -2329,13 +2329,13 @@ cards:
 
     fullWidth: false
     abstract: >
-      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
-      by dose, up to the latest day on which vaccine data were reported.
+      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, by dose, up to the latest day on which vaccine data were reported.
       For English areas, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
       The denominator used is the number of people on the National Immunisation Management Service (NIMS) database. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
-      For Scottish areas, the denominator used is the mid-2019 population estimate,
-      published by National Records of Scotland. For this reason, comparisons should be made with caution.
+      For Scottish areas, the denominator used is the mid-2019 population estimate, published by National Records of Scotland. 
+      For this reason, comparisons should be made with caution. 
+      Nations are calculated on the same basis as their constituent regions and local authorities, and shown for comparison purposes.
 
     download:
       - cumPeopleVaccinatedFirstDoseByVaccinationDate
@@ -2380,41 +2380,41 @@ cards:
       #       type: numeric
       #       tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
 
-      # - heading: Nation
-      #   tabType: table
-      #   params:
-      #     - key: areaType
-      #       sign: "="
-      #       value: nation
+      - heading: Nation
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
-      #   latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-      #   sortBy: areaName
+        latestBy: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+        sortBy: areaName
 
-      #   fields:
-      #     - label: Area
-      #       value: areaName
-      #       type: string
-      #       tooltip: ""
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
 
-      #     - label: 1st dose
-      #       value: cumPeopleVaccinatedFirstDoseByVaccinationDate
-      #       type: numeric
-      #       tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
+          - label: 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine up to {date}
 
-      #     - label: 1st dose (%)
-      #       value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-      #       type: numeric
-      #       tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
+          - label: 1st dose (%)
+            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine up to {date}
 
-      #     - label: 2nd dose
-      #       value: cumPeopleVaccinatedSecondDoseByVaccinationDate
-      #       type: numeric
-      #       tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
+          - label: 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine up to {date}            
 
-      #     - label: 2nd dose (%)
-      #       value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
-      #       type: numeric
-      #       tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
+          - label: 2nd dose (%)
+            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+            type: numeric
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine up to {date}
 
       - heading: Region
         tabType: table
