--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -85,7 +85,7 @@ changeLog:
   - type: *dataIssue
     date: "2021-06-11"
     displayBanner: false
-    relativeUrl: 
+    relativeUrl: "details/cases?areaType=nation&areaName=Scotland"
     headline: Delay in case reporting in Scotland
     body: |
       Because of a lab processing issue, reported case figures on 10 June for Scotland were missing around 150-200 positive cases. 
