adds changelog and banner

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -83,6 +83,33 @@ colours:
 
 changeLog:
   - type: *dataIssue
+    date: "2021-06-16"
+    displayBanner: false
+    relativeUrl: "/details/deaths?areaType=nation&areaName=England"
+    headline: Improved local authority allocation for deaths in England
+    body: |
+      Some deaths previously reported in England have been reallocated to different resident local authorities. 
+      Total deaths for England are unaffected, but some local authorities and regions will show inaccurate daily reported numbers for 16 June 2021 because of this change. 
+      The cumulative number of deaths in each affected local authority and region will also change.
+      
+      
+      This improvement means that when there are conflicting resident addresses, the address noted at death registration will take precedence.
+      This will result in fewer changes to the geographical allocation of historical death counts in future.
+      
+      
+      Details of the changes in total number of deaths at local authority level for 16 June 2021 data are available in 
+      [change_in_death_allocations_in_England_2021-06-16.csv](/downloads/miscellaneous/change_in_death_allocations_in_England_2021-06-16.csv) 
+  
+  - type: *dataIssue
+    date: "2021-06-16"
+    displayBanner: false
+    relativeUrl: "/details/vaccinations?areaType=nation&areaName=Scotland"
+    headline: Vaccine reporting in Scotland excludes data from GP systems
+    body: |
+      Vaccination figures reported by Public Health Scotland on 16 June 2021 exclude data from GP systems from 14 June 2021.
+      Missing figures will be added in the next release.
+
+  - type: *dataIssue
     date: "2021-06-15"
     displayBanner: false
     relativeUrl: "/details/vaccinations?areaType=nation&areaName=Scotland"
