--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -3,8 +3,8 @@
   disappearByUpdate: "2021-06-23"
   date: "2021-06-22"
   body: >
-    **No update to England vaccinations.** Following an IT issue that was reported to the NHS on 21 June, it has not been possible to update vaccinations
-    carried out in England. Therefore the UK totals only include updates from Northern Ireland, Scotland and Wales. [**More**](/details/whats-new)
+    **No update to England vaccinations.** Following an IT issue reported to the NHS on 21 June, it has not been possible to update vaccination figures
+    for England. UK totals only include updates from Northern Ireland, Scotland and Wales. [**More**](/details/whats-new)
 
 
 # {{ StartDevOnlyBlock }}
