--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -86,10 +86,9 @@ changeLog:
     date: "2021-06-23"
     displayBanner: true
     relativeUrl: "/details/vaccinations"
-    headline: England vaccinations reported for 48 hour period
+    headline: England vaccinations reported for 48-hour period
     body: |
-      Vaccination figures reported for England cover a 48 hour period. 
-      This is following the IT issue reported to the NHS on 21 June.
+      Vaccination figures reported for England cover a 48-hour period, following the IT issue reported to the NHS on 21 June.
 
 
   - type: *dataIssue
